# Segmentacao-Clientes-Clustering

./: README.md  main.py  pyproject.toml
data/: campanha_reativacao_hoje.csv  df_clientes.csv  df_clientes_header.csv  df_clustered_final.csv  df_produtos.csv  df_rfm_final.csv  df_rfm_scaled.csv  df_transacoes.csv  df_vendas.csv
data/scripts/: df_clientes.py  df_products.py  df_transacoes.py  df_vendas.py
notebooks/: Notebook 01.ipynb  Notebook 02.ipynb  Notebook 03.ipynb  Notebook 04.ipynb  Notebook 05.ipynb  notebook01.ipynb
